--- a/Alarming/Alarming/Base.lproj/Main.storyboard
+++ b/Alarming/Alarming/Base.lproj/Main.storyboard
@@ -1,24 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Map View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MapViewController" customModule="Alarming" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eWz-UD-5k9">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="도시명" id="ddN-x4-rjz">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="Oag-uh-8Hm"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="aaE-Fk-5KA"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dg4-wg-wpD" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="eWz-UD-5k9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="B2I-ej-aoZ"/>
+                            <constraint firstItem="eWz-UD-5k9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FNv-q1-viP"/>
+                            <constraint firstItem="Dg4-wg-wpD" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="RvO-HS-TRg"/>
+                            <constraint firstItem="eWz-UD-5k9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="ev2-hR-pcY"/>
+                            <constraint firstItem="Dg4-wg-wpD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gmy-i2-TDa"/>
+                            <constraint firstItem="Dg4-wg-wpD" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="iwh-kb-xUE"/>
+                            <constraint firstItem="Dg4-wg-wpD" firstAttribute="top" secondItem="eWz-UD-5k9" secondAttribute="bottom" id="pe3-Sk-E5B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="dasMAP" destination="Dg4-wg-wpD" id="JIQ-dV-G5M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
 </document>
